# dcentral-labs

./: .gitignore  .gitmodules  README.md  go.mod
ai-tools/: README.md
ai-tools/abi-assistant/: .dockerignore  .env  .env.example  .gitignore  CONFIG.md  CONTEXT.md  Cargo.toml  Dockerfile  Makefile  README.md  docker-compose.yml  mcp-default-config.toml
ai-tools/abi-assistant/.gemini/: settings.json
ai-tools/abi-assistant/data/: abi_assistant.db
ai-tools/abi-assistant/docs/: PROTOCOL_MIGRATION.md  TESTING_WITH_ANVIL.md
ai-tools/abi-assistant/examples/: Makefile  README.md  intent-resolution.rs  library-usage.rs  transaction-building.rs
ai-tools/abi-assistant/examples/curl-client/: README.md  defi-operations.sh  intent-resolution.sh  mcp-curl-demo.sh  quick-test.sh  transaction-tools.sh
ai-tools/abi-assistant/examples/gemini-agent/: .env-example-rename-to-(dot)env  GEMINI.md  README.md  config.yaml  demo.sh  example.py  intent-integration.py  requirements.txt  run-gemini.sh  setup.sh
ai-tools/abi-assistant/examples/gemini-agent/.gemini/: settings.json
ai-tools/abi-assistant/examples/gemini-agent/prompts/: arbitrage.txt  yield-farming.txt
ai-tools/abi-assistant/oci/: .dockerignore  Dockerfile  Dockerfile.anvil  Dockerfile.dev  README.md  docker-compose.yml
ai-tools/abi-assistant/prompts/examples/: generic_intents.yaml
ai-tools/abi-assistant/prompts/gemini/: intent_classifier.yaml
ai-tools/abi-assistant/prompts/templates/: response_format.json
ai-tools/abi-assistant/scripts/: anvil.sh  common.sh  container.sh  db-setup.sh  dev.sh  docker-compose.sh  podman-build.sh  podman-clean.sh  podman-coverage.sh  podman-dev.sh  podman-run.sh  podman-setup.sh  podman-test.sh  setup.sh  test-mcp.sh  test.sh
ai-tools/abi-assistant/src/: config.rs  error.rs  lib.rs  main.rs  mcp_service.rs
ai-tools/abi-assistant/src/abi/: decoder.rs  encoder.rs  mod.rs  parser.rs
ai-tools/abi-assistant/src/config/: tests.rs
ai-tools/abi-assistant/src/intent/: classifier.rs  hybrid_resolver.rs  mod.rs  patterns.rs  protocol_normalizer.rs  registry.rs  resolver.rs
ai-tools/abi-assistant/src/server/: builder.rs  handlers.rs  mod.rs  tools.rs  transport.rs
ai-tools/abi-assistant/src/storage/: mod.rs
ai-tools/abi-assistant/src/transaction/: builder.rs  formatter.rs  mod.rs
ai-tools/abi-assistant/tests/: integration_test.rs
ai-tools/vertx-ai-studio/blockchain-a2a-agent/: Cargo.toml  Dockerfile  Makefile  QUICKSTART.md  cloudbuild.yaml
ai-tools/vertx-ai-studio/blockchain-a2a-agent/src/: blockchain.rs  llm.rs  main.rs
bitvm/example/: .env.example  .gitignore  BITVM_INTEGRATION_PLAN.md  Cargo.toml  EXAMPLE.md  Makefile  README-PODMAN.md  README.md  docker-compose.yml  podman-compose.yml  verification-engine-guide.md
bitvm/example/contracts/: SimpleAMM.sol
bitvm/example/scripts/: quick-regtest.sh  run-real-demo.sh  run-regtest-demo.sh  setup-podman.sh
bitvm/example/vault-protocol/: Dockerfile  README.md  jest.config.js  package.json  tsconfig.json
bitvm/example/vault-protocol/src/: amm-liquidity-demo.ts  demo.ts  garbled-demo.ts  index.ts  lending-demo.ts  real-bitvm-demo.ts  simple-demo.ts  taproot-demo.ts
bitvm/example/verification-engine/: Cargo.toml  Dockerfile  README.md
coprocessor/basic/: Cargo.toml
coprocessor/basic/src/: main.rs
coprocessor/basic/src/coprocessor/: mod.rs
mcp/evm/defi-trader/: .gitignore  Cargo.toml  Config.toml  TODO.md
mcp/evm/defi-trader/abi/: balancer_vault.json  curve_pool.json  sushiswap_router.json
mcp/evm/defi-trader/src/: config.rs  defi_trader.rs  main.rs
midnight-ntwrk/privacy-preserving-defi/tee-service/: Cargo.toml  config.prod.toml  config.toml
midnight-ntwrk/privacy-preserving-defi/tee-service/src/: api.rs  blockchain.rs  config.rs  main.rs  midnight_zk.rs  zk_proofs.rs
net-latency/: Cargo.toml  Dockerfile  README.md
net-latency/src/: main.rs
private-eth/mcp-evm/agent/: Cargo.toml
private-eth/mcp-evm/agent/src/: main.rs
private-eth/mcp-evm/server/: Cargo.toml
private-eth/mcp-evm/server/src/: main.rs
tee/confidential-salary/: .gitignore  Cargo.toml  Makefile  README.md  test_local_attestation.sh  test_tdx  test_tdx.c
tee/confidential-salary/.cargo/: config.toml
tee/confidential-salary/client/: Cargo.toml
tee/confidential-salary/client/src/: attestation_verifier.rs  main.rs
tee/confidential-salary/docs/: MRTD_VERIFICATION.md
tee/confidential-salary/scripts/: attest_and_run_client.sh  build.sh  calculate_mrtd.py  compare_attestation.sh  deterministic_build.sh  gcp_operations.sh  quick_fix.sh  remote_build.sh  run_server.sh  test_attestation.sh  test_local.sh  troubleshoot.sh
tee/confidential-salary/server/: Cargo.toml
tee/confidential-salary/server/src/: attestation.rs  main.rs  raw_attestation.rs  tdx_ioctl.rs
tee/confidential-salary/shared/: Cargo.toml
tee/confidential-salary/shared/src/: lib.rs
tee/confidential-space/: .env.example  .gcloudignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  config.toml
tee/confidential-space/scripts/: cloud-build.sh  common.sh  health.sh  image.sh  setup.sh
tee/confidential-space/src/: main.rs
tee/confidential-space/terraform/: backend.tf  cloudbuild-image.yaml  cloudbuild.yaml  main.tf  outputs.tf  variables.tf
zkp/: Cargo.toml  README.md
zkp-by-example/backend/: .env.example  .gitignore  Cargo.toml  Dockerfile  cloudbuild-deploy.yaml  cloudbuild.yaml
zkp-by-example/backend/src/: config.rs  handlers.rs  main.rs  models.rs  state.rs
zkp-by-example/proof-service/: Cargo.toml  Dockerfile  cloudbuild-deploy.yaml  cloudbuild.yaml  dummy-proof-request.json
zkp-by-example/proof-service/src/: config.rs  lib.rs  main.rs  zkp.rs
zkp-by-example/proof-service/tests/: benchmarks.rs
zkp/zkp-proof-gen/: Cargo.toml
zkp/zkp-proof-gen/src/: lib.rs
zkp/zkp-reth/: Cargo.toml  polygon-zero.db
zkp/zkp-reth/src/: error.rs  exex.rs  main.rs  rpc.rs  tracer.rs
zkp/zkp-reth/src/db/: mod.rs  pg.rs  sqlite.rs
zkp/zkp-witness-gen/: Cargo.toml
zkp/zkp-witness-gen/src/: block.rs  lib.rs  state.rs  transaction.rs  witness.rs
(+1366 files in other folders)
