[package]
name = "net-latency"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "net-latency"
path = "src/main.rs"
test= false
bench = false

[dependencies]
trippy = {version="0.11.0", default-features=false, features=["core", "dns"]}
tokio = {version="1.40.0", features=["full"]}
envconfig = "0.11.0"
http = "1.1.0"
anyhow = "1.0.87"
rocket = "0.5.1"
