[workspace]
members = [ "zkp-proof-gen","zkp-reth", "zkp-witness-gen"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
rust-version = "1.81"
license = "Apache-2.0"
publish = false

[workspace.dependencies]
async-trait = "0.1.81"
alloy-rlp = "0.3.4"
clap = "4"
jsonrpsee = "0.24"
reth = { git = "https://github.com/fractal-zkp/reth.git", branch = "zeth" }
reth-evm = { git = "https://github.com/fractal-zkp/reth.git", branch = "zeth"  }
reth-revm = { git = "https://github.com/fractal-zkp/reth.git", branch = "zeth"  }
reth-exex = { git = "https://github.com/fractal-zkp/reth.git", branch = "zeth"  }
reth-node-api = { git = "https://github.com/fractal-zkp/reth.git", branch = "zeth"  }
reth-node-core = { git = "https://github.com/fractal-zkp/reth.git", branch = "zeth"  }
reth-node-ethereum = { git = "https://github.com/fractal-zkp/reth.git", branch = "zeth"  }
reth-primitives = { git = "https://github.com/fractal-zkp/reth.git", branch = "zeth"  }
reth-provider = { git = "https://github.com/fractal-zkp/reth.git", branch = "zeth"  }
reth-rpc = { git = "https://github.com/fractal-zkp/reth.git", branch = "zeth"  }
reth-tracing = { git = "https://github.com/fractal-zkp/reth.git", branch = "zeth"  }
reth-trie = { git = "https://github.com/fractal-zkp/reth.git", branch = "zeth"  }

revm = { git = "https://github.com/fractal-zkp/revm.git", branch = "zeth", features = [
    "std",
    "secp256k1",
    "blst",
], default-features = false }

eyre = "0.6"
tokio = { version = "1.21", default-features = false }
futures = "0.3"

compat = { git = "https://github.com/fractal-zkp/zk_evm.git", branch = "zeth" }
trace_decoder = { git = "https://github.com/fractal-zkp/zk_evm.git", branch = "zeth" }
mpt_trie = { git = "https://github.com/fractal-zkp/zk_evm.git", branch = "zeth" }

primitive-types = { version = "0.12.2", package = "primitive-types" }
serde_json = "1.0.132"

tracing = "0.1.0"

sqlx = { version = "0.7", features = [ "runtime-tokio", "sqlite", "postgres" ] }
# sp1-core = { git = "https://github.com/succinctlabs/sp1", tag = "v3.0.0"}
sp1-lib = { version = "3.1.0", features = ["verify"] }
sp1-zkvm = { version = "3.1.0", features = ["verify"] }
rsp = { git= "https://github.com/succinctlabs/rsp" }

ethereum-types = "0.15.1"
serde = { version = "1.0.213", features=["derive"]}
thiserror = "1.0.65"
