[package]
name = "abi-assistant"
version = "0.1.0"
edition = "2021"

[dependencies]
# Minimal dependencies that work with Rust 1.79
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
sha3 = "0.10"

# For MCP server - using stable versions
tokio = { version = "1.32", features = ["full"] }
hyper = { version = "0.14", features = ["server", "tcp", "http1", "http2"] }
tower = "0.4"
tower-http = { version = "0.4", features = ["cors"] }

# Database
rusqlite = { version = "0.29", features = ["bundled"] }

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

[workspace]
# Ensures we use resolver v2 which handles dependencies better
resolver = "2"