[package]
name = "abi-assistant"
version = "0.1.0"
edition = "2021"

[dependencies]
# Minimal dependencies that work with Rust 1.79
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
hex = "0.4"
sha3 = "0.10"

# For MCP server - using stable versions
tokio = { version = "1.32", features = ["full"] }
hyper = { version = "0.14", features = ["server", "tcp", "http1", "http2"] }
tower = "0.4"
tower-http = { version = "0.4", features = ["cors"] }

# MCP SDK
rmcp = { version = "0.5", features = ["transport-sse-server", "transport-streamable-http-server"] }
axum = "0.8"
tokio-util = "0.7"
anyhow = "1.0"

# Database
rusqlite = { version = "0.29", features = ["bundled"] }

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Configuration
toml = "0.8"

# Streaming support for SSE
futures = "0.3"

# UUID generation
uuid = { version = "1.4", features = ["v4"] }

# For async stream generation
async-stream = "0.3"

# For lazy static (session manager)
lazy_static = "1.4"

[dev-dependencies]
tempfile = "3.8"

[[example]]
name = "library-usage"
path = "examples/library-usage.rs"

[workspace]
# Ensures we use resolver v2 which handles dependencies better
resolver = "2"

# Note: This project is compatible with Rust 1.79
# If you encounter dependency issues, run:
# cargo update indexmap --precise 2.0.0