[package]
name = "bitvm3-trustless-vault"
version = "0.1.0"
edition = "2021"

[dependencies]
# Bitcoin
bitcoin = "0.31"
bitcoincore-rpc = "0.18"
secp256k1 = { version = "0.27", features = ["rand", "hashes"] }

# Cryptography
ark-std = "0.4"
ark-ff = "0.4"
ark-ec = "0.4"
ark-serialize = "0.4"
ark-groth16 = "0.4"
ark-bls12-381 = "0.4"
ark-snark = "0.4"
sha2 = "0.10"
blake3 = "1.5"

# Garbled Circuits
fancy-garbling = "0.6"
scuttlebutt = "0.5"
ocelot = "0.2"

# Async Runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Error Handling
thiserror = "1.0"
anyhow = "1.0"

# CLI
clap = { version = "4.4", features = ["derive"] }
colored = "2.1"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Database (optional)
rocksdb = { version = "0.21", optional = true }

# Network
libp2p = { version = "0.53", optional = true }

[dev-dependencies]
criterion = "0.5"
proptest = "1.4"
quickcheck = "1.0"

[features]
default = []
persistence = ["rocksdb"]
networking = ["libp2p"]

[profile.release]
opt-level = 3
lto = true
codegen-units = 1

[[bench]]
name = "garbled_circuits"
harness = false

[[bench]]
name = "snark_verification"
harness = false