[package]
name = "basic"
version = "0.1.0"
edition = "2021"

[dependencies]
ethers = { version = "2.0", features = ["abigen",  "ws"] }
tokio = { version = "1.0", features = ["full"] }
serde_json = "1.0"
dotenv = "0.15.0"
serde = "1.0.215"

[dev-dependencies]
tokio = { version = "1.0", features = ["macros", "rt-multi-thread"] }
anvil = "0.1"
ethers-solc = "2.0"
