[package]
name    = "cs-hello-world"
version = "0.1.0"
edition = "2021"

[dependencies]
axum              = "0.8"
tokio             = { version = "1", features = ["full"] }
serde             = { version = "1", features = ["derive"] }
serde_json        = "1"
tracing           = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "json"] }
chrono            = { version = "0.4", features = ["serde"] }

[profile.release]
opt-level    = 3
lto          = true
codegen-units = 1
panic        = "abort"
strip        = true
