[package]
name = "proof-service"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.7.0"
dotenvy = "0.15.7"
tokio = { version = "1.37.0", features = ["full"] }
serde = { version = "1.0.197", features = ["derive"] }
ark-groth16 = "0.4.0"
ark-bls12-381 = "0.4.0"
ark-ff = "0.4.0"
ark-ec = "0.4.0"
ark-relations = "0.4.0"
ark-snark = "0.4.0"
ark-std = { version = "0.4.0", features = ["getrandom"] }
ark-r1cs-std = "0.4.0"
ark-crypto-primitives = { version = "0.4.0", features = ["r1cs", "crh"] }
rand = "0.8.5"
tracing = "0.1.40"
tracing-subscriber = "0.3.18"
