[package]
name = "proof-service"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenvy = "0.15.7"
actix-web = "4.7.0"
serde = { version = "1.0.197", features = ["derive"] }
rand = "0.8.5"
sha2 = "0.10.8"
base64 = "0.22.1"
actix-cors = "0.7.0"
halo2_proofs = "0.3.1"
rand_core = "0.6.4"
log = "0.4.21"
env_logger = "0.11.3"

[dev-dependencies]
proof-service = { path = "." }
serde = { version = "1.0.197", features = ["derive"] }
serde_json = "1.0.115"