[package]
name = "zkp-proof-gen"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]

zkp-witness-gen = { path = "../zkp-witness-gen" }
serde.workspace = true
# sp1-lib.workspace = true
# sp1-zkvm.workspace = true
rsp.workspace = true
ethereum-types.workspace = true

reth-primitives = { workspace = true }
reth-provider = { workspace = true }
reth-rpc = { workspace = true }
tokio = { workspace = true }
