[package]
name = "zkp-reth"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish.workspace = true

[dependencies]
async-trait.workspace = true
alloy-rlp.workspace = true
clap.workspace = true
jsonrpsee.workspace = true
reth.workspace = true
reth-evm.workspace = true
reth-revm.workspace = true
reth-exex.workspace = true
reth-node-api.workspace = true
reth-node-core.workspace = true
reth-node-ethereum.workspace = true
reth-primitives.workspace = true
reth-provider.workspace = true
reth-rpc.workspace = true
reth-tracing.workspace = true
reth-trie.workspace = true

revm.workspace = true

eyre.workspace = true
tokio.workspace = true
futures.workspace = true

compat.workspace = true
trace_decoder.workspace = true
mpt_trie.workspace = true

primitive-types.workspace = true
serde_json.workspace = true
thiserror.workspace = true

tracing.workspace = true

sqlx.workspace = true