[package]
name = "blockchain-a2a-agent"
version = "0.1.0"
edition = "2024"

[dependencies]
anyhow = "1"
axum = "0.8.8"
gcp_auth = "0.12"
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
tokio = { version = "1.50.0", features = ["full"] }
