[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
version = "0.1.0"
edition = "2021"
authors = ["BitVM3 Team"]
license = "MIT"

[workspace.dependencies]
# Bitcoin
bitcoin = "0.32"
bitcoincore-rpc = "0.18"
secp256k1 = { version = "0.27", features = ["rand"] }

# BitVM Integration
bitvm = { git = "https://github.com/BitVM/BitVM", branch = "main" }
bitcoin-script = { git = "https://github.com/BitVM/rust-bitcoin-script" }
bitcoin-scriptexec = { git = "https://github.com/BitVM/rust-bitcoin-scriptexec" }
bitcoin-script-stack = { git = "https://github.com/BitVM/rust-bitcoin-script-stack" }

# Cryptography
ark-bn254 = { version = "0.5.0", features = ["curve", "scalar_field"], default-features = false }
ark-ff = "0.5.0"
ark-ec = "0.5.0"
ark-groth16 = "0.5.0"
ark-serialize = "0.5.0"
sha2 = "0.10"
blake3 = "1.5"
hex = "0.4"

# Async Runtime
tokio = { version = "1.35", features = ["full"] }
async-trait = "0.1"

# API Server
tonic = "0.10"
prost = "0.12"
tower = "0.4"
hyper = "1.0"
axum = "0.7"

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bincode = "1.3"

# Error Handling
thiserror = "1.0"
anyhow = "1.0"

# Logging
tracing = "0.1"
tracing-subscriber = "0.3"

# Database
rocksdb = "0.21"
sled = "0.34"

# Testing
criterion = "0.5"
proptest = "1.4"
quickcheck = "1.0"

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
panic = "abort"

[profile.bench]
inherits = "release"