[package]
name = "mcp-evm-server"
version = "0.1.0"
edition = "2021"

[dependencies]
rmcp = { git = "https://github.com/modelcontextprotocol/rust-sdk.git", branch = "main", features = ["transport-io"] }
rmcp-macros = { git = "https://github.com/modelcontextprotocol/rust-sdk.git", branch = "main" }
anyhow = "1.0"
ethers = { version = "2.0", features = ["legacy"] }
tokio = { version = "1", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"