[package]
name = "server"
version = "0.1.0"
edition = "2021"

[dependencies]
shared = { path = "../shared" }
tokio = { version = "1.35", features = ["full"] }
warp = "0.3"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
base64 = "0.21"
sha2 = "0.10"
hex = "0.4"
uuid = { version = "1.6", features = ["v4", "serde"] }
tracing = "0.1"
libc = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
dashmap = "5.5"
lazy_static = "1.4"
rand = "0.8"
reqwest = { version = "0.11", features = ["json"] }
x509-parser = "0.15"
ring = "0.17"
p256 = "0.13"
ecdsa = "0.16"
webpki = "0.22"