[package]
name = "bitvm3-api"
version.workspace = true
edition.workspace = true

[[bin]]
name = "bitvm3-server"
path = "src/main.rs"

[dependencies]
bitvm3-core = { path = "../core" }
bitvm3-crypto = { path = "../crypto" }
bitvm3-vault = { path = "../vault" }

# API Framework
axum = { workspace = true }
tower = { workspace = true }
tower-http = { version = "0.5", features = ["cors", "trace"] }
hyper = { workspace = true }
tonic = { workspace = true }
prost = { workspace = true }

# Async
tokio = { workspace = true }
async-trait = { workspace = true }

# Serialization
serde = { workspace = true }
serde_json = { workspace = true }

# Auth
jsonwebtoken = "9.2"

# Logging
tracing = { workspace = true }
tracing-subscriber = { workspace = true }

# Error handling
thiserror = { workspace = true }
anyhow = { workspace = true }

# Utilities
uuid = { version = "1.6", features = ["v4", "serde"] }
chrono = "0.4"
hex = "0.4"
secp256k1 = { workspace = true }

# Cryptography for BitVM integration
ark-bn254 = { workspace = true }
ark-ff = { workspace = true }
ark-groth16 = { workspace = true }
ark-serialize = { workspace = true }
ark-std = "0.5.0"
bitcoin = { workspace = true }

[build-dependencies]
tonic-build = "0.10"